<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/title_background"
    tools:context="com.project.emporiodopao.activities.TitleActivity">

    <ImageView
        android:id="@+id/title_logo"
        android:layout_width="311dp"
        android:layout_height="219dp"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/title_logo_description"
        app:srcCompat="@drawable/logo_title" />

    <Button
        android:id="@+id/main_btn"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="96dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_shape"
        android:text="@string/pedido"
        android:textColor="#521b06"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/address_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.02"
        android:text="@string/address_title"
        android:textColor="#FFCE00" />

    <TextView
        android:id="@+id/address_txt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.02"
        android:gravity="center_horizontal"
        android:text="@string/city_title"
        android:textColor="#FFCE00" />

    <TextView
        android:id="@+id/address_txt3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.02"
        android:gravity="center_horizontal"
        android:text="@string/postal_code_title"
        android:textColor="#FFCE00" />

    <TextView
        android:id="@+id/address_txt4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.02"
        android:gravity="center_horizontal"
        android:text="@string/phone_title"
        android:textColor="#FFCE00" />

</LinearLayout>
