<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFCF7B"
    tools:context="com.project.emporiodopao.activities.ContactActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:paddingTop="96dp"
        android:id="@+id/linearLayout">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:paddingBottom="16dp"
            android:text="@string/fill_notice_label"
            android:textAlignment="center"
            android:textColor="#440505" />

        <EditText
            android:id="@+id/nameTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:ems="10"
            android:hint="@string/contact_name"
            android:inputType="textPersonName"
            android:textAlignment="textStart"
            android:textColor="#440505"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="130dp" />

        <EditText
            android:id="@+id/mailTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:ems="10"
            android:hint="@string/contact_email"
            android:inputType="textEmailAddress"
            android:textAlignment="textStart"
            android:textColor="#440505"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="191dp" />

        <EditText
            android:id="@+id/phoneNumb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:ems="10"
            android:hint="@string/contact_phone"
            android:inputType="phone"
            android:textAlignment="textStart"
            android:textColor="#440505"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="256dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="26dp"
            android:contentDescription="@string/contact_screen_logo"
            app:srcCompat="@drawable/app_logo" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <Button
            android:id="@+id/time_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFCE00"
            android:text="@string/next_btn_label"
            android:textColor="#521b06" />
    </RelativeLayout>

</RelativeLayout>
