<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="false">

    <LinearLayout
        android:id="@+id/txtLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/prodCateg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="8dp"
            android:text="@string/categoria_produto"
            android:textAllCaps="false"
            android:textColor="#521b06" />

        <TextView
            android:id="@+id/prodName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:text="@string/nome_produto"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/prodDescr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/valor_prod_label"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/prodQty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/quant_label"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/prodTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:text="@string/total_produto_label"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

</android.support.v7.widget.CardView>