<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFCF7B"
    tools:context="com.project.emporiodopao.activities.OrderActivity">

    <LinearLayout
        android:id="@+id/txtLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/cNameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/client_name_label"
            android:textColor="#521b06"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/cMailLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/client_mail_label"
            android:textColor="#521b06"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/cPhoneLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/client_phone_label"
            android:textColor="#521b06"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/orderDateLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/order_date_label"
            android:textColor="#521b06"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/orderTimeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/order_time_label"
            android:textColor="#521b06"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/selProdLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/selected_prod_label"
            android:textColor="#521b06"
            android:textSize="12sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/orders_list"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:scrollbars="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp" />

        <TextView
            android:id="@+id/totalValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:textColor="#521b06"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/send_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#FFCE00"
        android:text="@string/enviar_pedido"
        android:textColor="#521b06" />

</FrameLayout>
